<resources>
    <string name="app_name">Quake Report</string>

    <!-- Placeholder data to display the earthquake list items. -->
    <!-- Magnitude of earthquake -->
    <string name="placeholder_earthquake_magnitude">7.2</string>
    <!-- location offset for earthquake place. -->
    <string name="placeholder_earthquake_location_offset">72KM N OF</string>
    <!-- location primary for earthquake place, -->
    <string name="placeholder_earthquake_location_primary">San Francisco</string>
    <!-- Near the for location offset when there's no offset to split. -->
    <string name="near_the">Near the</string>
    <!-- Date of earthquake -->
    <string name="placeholder_earthquake_date">Feb 2, 2016</string>
    <!-- Time of the earthquake -->
    <string name="placeholder_earthquake_time">3:00 PM</string>
    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_earthquakes">No earthquakes found.</string>
    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>
</resources>