<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <!-- TextView to display magnitude of earthquake. -->
    <TextView
        android:id="@+id/earthquake_magnitude"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:padding="4dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/magnitude_circle"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/placeholder_earthquake_magnitude"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- TextView to display offset location of earthquake. -->
        <TextView
            android:id="@+id/location_offset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textAllCaps="true"
            android:textColor="@color/textColorEarthquakeDetails"
            android:textSize="12sp"
            android:text="@string/placeholder_earthquake_location_offset"/>

        <!-- TextView to display primary location of earthquake. -->
        <TextView
            android:id="@+id/location_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/textColorEarthquakeLocation"
            android:textSize="16sp"
            android:text="@string/placeholder_earthquake_location_primary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <!-- TextView to display date of earthquake. -->
        <TextView
            android:id="@+id/earthquake_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/textColorEarthquakeDetails"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/placeholder_earthquake_date"/>

        <!-- TextView to display time of earthquake. -->
        <TextView
            android:id="@+id/earthquake_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="@color/textColorEarthquakeDetails"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/placeholder_earthquake_time"/>
    </LinearLayout>
</LinearLayout>